--- a/styles/game.scss
+++ b/styles/game.scss
@@ -26,7 +26,7 @@ body {
 
 .game-view {
     img {
-        width: 70%;
+        width: 350px;
         margin: 0 auto;
         display: block;
         // border: 2px solid white;
@@ -49,16 +49,18 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     padding: 1em;
+    max-width: 600px;
+    margin: auto;
 
     .letter {
         display: block;
-        font-size: 1.3rem;
+        font-size: 1.1rem;
         border: 1px solid white;
         padding: 10px;
         border-radius: 8px;
         font-family: sans-serif;
-        // background-color: ;
     }
+
     .letter:hover {
         background-color: magenta;
         cursor: pointer;
@@ -69,4 +71,28 @@ body {
     width: fit-content;
     margin: 0 auto;
     cursor: pointer;
+}
+
+.hint-div {
+    text-align: center;
+    font-size: 1.3rem;
+}
+
+@media only screen and (min-width: 900px) {
+    .game-view {
+        display: flex;
+        align-items: center;
+        width: fit-content;
+        gap: 5em;
+        margin: 0 auto 1em;
+
+        img {
+            width: 400px;
+        }
+    }
+
+    .letter {
+        width: 2rem;
+        text-align: center;
+    }
 }
