--- a/styles/game.css
+++ b/styles/game.css
@@ -22,6 +22,10 @@ body {
   text-align: center;
   padding: 0.3em;
 }
+.hero a {
+  text-decoration: none;
+  color: white;
+}
 
 .game-view img {
   width: 350px;
