--- a/styles/game.scss
+++ b/styles/game.scss
@@ -22,6 +22,10 @@ body {
     font-size: 2rem;
     text-align: center;
     padding: .3em;
+    a{
+        text-decoration: none;
+        color: white;
+    }
 }
 
 .game-view {
